parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> CONS
Rule 1     CONS -> SELECT_ FROM_ JOIN_ WHERE_ GROUP_BY ORDER_BY
Rule 2     SELECT_ -> SELECT CAMPOS
Rule 3     SELECT_ -> SELECT DISTINCT CAMPOS
Rule 4     CAMPOS -> CAMPO COMA CAMPOS
Rule 5     CAMPOS -> CAMPO
Rule 6     CAMPO -> CADENA PUNTO CADENA
Rule 7     CAMPO -> CADENA PUNTO CADENA AS COMILLA CADENA COMILLA
Rule 8     CAMPO -> FUNCION AS COMILLA CADENA COMILLA
Rule 9     FUNCION -> MIN PARENTESIS_IZQUIERDO CADENA PUNTO CADENA PARENTESIS_DERECHO
Rule 10    FUNCION -> MAX PARENTESIS_IZQUIERDO CADENA PUNTO CADENA PARENTESIS_DERECHO
Rule 11    FUNCION -> COUNT PARENTESIS_IZQUIERDO CADENA PUNTO CADENA PARENTESIS_DERECHO
Rule 12    FUNCION -> COUNT PARENTESIS_IZQUIERDO DISTINCT CADENA PUNTO CADENA PARENTESIS_DERECHO
Rule 13    FROM_ -> FROM CADENA
Rule 14    FROM_ -> FROM CADENA CADENA
Rule 15    FROM_ -> FROM CADENA AS CADENA
Rule 16    JOIN_ -> ELECCION_JOIN JOIN_
Rule 17    JOIN_ -> <empty>
Rule 18    ELECCION_JOIN -> INNER JOIN CADENA ON CONDICION_
Rule 19    ELECCION_JOIN -> INNER JOIN CADENA CADENA ON CONDICION_
Rule 20    ELECCION_JOIN -> INNER JOIN CADENA AS CADENA ON CONDICION_
Rule 21    ELECCION_JOIN -> LEFT JOIN CADENA ON CONDICION_
Rule 22    ELECCION_JOIN -> LEFT JOIN CADENA CADENA ON CONDICION_
Rule 23    ELECCION_JOIN -> LEFT JOIN CADENA AS CADENA ON CONDICION_
Rule 24    CONDICION_ -> CONDICION
Rule 25    CONDICION_ -> CONDICION_ AND CONDICION_
Rule 26    CONDICION_ -> CONDICION_ OR CONDICION_
Rule 27    CONDICION_ -> PARENTESIS_IZQUIERDO CONDICION_ OR CONDICION_ PARENTESIS_DERECHO
Rule 28    CONDICION_ -> CADENA PUNTO CADENA SUBCONS
Rule 29    CONDICION -> CADENA PUNTO CADENA OPERADOR_COMPARATIVO VALOR
Rule 30    CONDICION -> CADENA PUNTO CADENA OPERADOR_COMPARATIVO CADENA PUNTO CADENA
Rule 31    CONDICION -> CADENA PUNTO CADENA NULLABLE
Rule 32    OPERADOR_COMPARATIVO -> MENOR
Rule 33    OPERADOR_COMPARATIVO -> IGUAL
Rule 34    OPERADOR_COMPARATIVO -> MAYOR
Rule 35    OPERADOR_COMPARATIVO -> MENOR_O_IGUAL
Rule 36    OPERADOR_COMPARATIVO -> MAYOR_O_IGUAL
Rule 37    OPERADOR_COMPARATIVO -> DISTINTO
Rule 38    VALOR -> NUMERO
Rule 39    VALOR -> COMILLA CADENA COMILLA
Rule 40    NULLABLE -> IS NULL
Rule 41    NULLABLE -> IS NOT NULL
Rule 42    SUBCONS -> IN PARENTESIS_IZQUIERDO CONS PARENTESIS_DERECHO
Rule 43    SUBCONS -> NOT IN PARENTESIS_IZQUIERDO CONS PARENTESIS_DERECHO
Rule 44    WHERE_ -> WHERE CONDICION_
Rule 45    WHERE_ -> <empty>
Rule 46    GROUP_BY -> GROUP BY CAMPOS_AGRUPADOS HAVING_
Rule 47    GROUP_BY -> <empty>
Rule 48    CAMPOS_AGRUPADOS -> CADENA PUNTO CADENA COMA CAMPOS_AGRUPADOS
Rule 49    CAMPOS_AGRUPADOS -> CADENA PUNTO CADENA
Rule 50    HAVING_ -> HAVING FUNCION OPERADOR_COMPARATIVO VALOR
Rule 51    HAVING_ -> <empty>
Rule 52    ORDER_BY -> ORDER BY CAMPOS_ORDENADOS
Rule 53    ORDER_BY -> <empty>
Rule 54    CAMPOS_ORDENADOS -> CADENA PUNTO CADENA ORDEN COMA CAMPOS_ORDENADOS
Rule 55    CAMPOS_ORDENADOS -> CADENA PUNTO CADENA ORDEN
Rule 56    ORDEN -> ASC
Rule 57    ORDEN -> DESC
Rule 58    ORDEN -> <empty>

Terminals, with rules where they appear

AND                  : 25
AS                   : 7 8 15 20 23
ASC                  : 56
BY                   : 46 52
CADENA               : 6 6 7 7 7 8 9 9 10 10 11 11 12 12 13 14 14 15 15 18 19 19 20 20 21 22 22 23 23 28 28 29 29 30 30 30 30 31 31 39 48 48 49 49 54 54 55 55
COMA                 : 4 48 54
COMILLA              : 7 7 8 8 39 39
COUNT                : 11 12
DESC                 : 57
DISTINCT             : 3 12
DISTINTO             : 37
FROM                 : 13 14 15
GROUP                : 46
HAVING               : 50
IGUAL                : 33
IN                   : 42 43
INNER                : 18 19 20
IS                   : 40 41
JOIN                 : 18 19 20 21 22 23
LEFT                 : 21 22 23
MAX                  : 10
MAYOR                : 34
MAYOR_O_IGUAL        : 36
MENOR                : 32
MENOR_O_IGUAL        : 35
MIN                  : 9
NOT                  : 41 43
NULL                 : 40 41
NUMERO               : 38
ON                   : 18 19 20 21 22 23
OR                   : 26 27
ORDER                : 52
PARENTESIS_DERECHO   : 9 10 11 12 27 42 43
PARENTESIS_IZQUIERDO : 9 10 11 12 27 42 43
PUNTO                : 6 7 9 10 11 12 28 29 30 30 31 48 49 54 55
SELECT               : 2 3
WHERE                : 44
error                : 

Nonterminals, with rules where they appear

CAMPO                : 4 5
CAMPOS               : 2 3 4
CAMPOS_AGRUPADOS     : 46 48
CAMPOS_ORDENADOS     : 52 54
CONDICION            : 24
CONDICION_           : 18 19 20 21 22 23 25 25 26 26 27 27 44
CONS                 : 42 43 0
ELECCION_JOIN        : 16
FROM_                : 1
FUNCION              : 8 50
GROUP_BY             : 1
HAVING_              : 46
JOIN_                : 1 16
NULLABLE             : 31
OPERADOR_COMPARATIVO : 29 30 50
ORDEN                : 54 55
ORDER_BY             : 1
SELECT_              : 1
SUBCONS              : 28
VALOR                : 29 50
WHERE_               : 1

Parsing method: LALR

state 0

    (0) S' -> . CONS
    (1) CONS -> . SELECT_ FROM_ JOIN_ WHERE_ GROUP_BY ORDER_BY
    (2) SELECT_ -> . SELECT CAMPOS
    (3) SELECT_ -> . SELECT DISTINCT CAMPOS

    SELECT          shift and go to state 3

    CONS                           shift and go to state 1
    SELECT_                        shift and go to state 2

state 1

    (0) S' -> CONS .



state 2

    (1) CONS -> SELECT_ . FROM_ JOIN_ WHERE_ GROUP_BY ORDER_BY
    (13) FROM_ -> . FROM CADENA
    (14) FROM_ -> . FROM CADENA CADENA
    (15) FROM_ -> . FROM CADENA AS CADENA

    FROM            shift and go to state 5

    FROM_                          shift and go to state 4

state 3

    (2) SELECT_ -> SELECT . CAMPOS
    (3) SELECT_ -> SELECT . DISTINCT CAMPOS
    (4) CAMPOS -> . CAMPO COMA CAMPOS
    (5) CAMPOS -> . CAMPO
    (6) CAMPO -> . CADENA PUNTO CADENA
    (7) CAMPO -> . CADENA PUNTO CADENA AS COMILLA CADENA COMILLA
    (8) CAMPO -> . FUNCION AS COMILLA CADENA COMILLA
    (9) FUNCION -> . MIN PARENTESIS_IZQUIERDO CADENA PUNTO CADENA PARENTESIS_DERECHO
    (10) FUNCION -> . MAX PARENTESIS_IZQUIERDO CADENA PUNTO CADENA PARENTESIS_DERECHO
    (11) FUNCION -> . COUNT PARENTESIS_IZQUIERDO CADENA PUNTO CADENA PARENTESIS_DERECHO
    (12) FUNCION -> . COUNT PARENTESIS_IZQUIERDO DISTINCT CADENA PUNTO CADENA PARENTESIS_DERECHO

    DISTINCT        shift and go to state 7
    CADENA          shift and go to state 9
    MIN             shift and go to state 11
    MAX             shift and go to state 12
    COUNT           shift and go to state 13

    CAMPOS                         shift and go to state 6
    CAMPO                          shift and go to state 8
    FUNCION                        shift and go to state 10

state 4

    (1) CONS -> SELECT_ FROM_ . JOIN_ WHERE_ GROUP_BY ORDER_BY
    (16) JOIN_ -> . ELECCION_JOIN JOIN_
    (17) JOIN_ -> .
    (18) ELECCION_JOIN -> . INNER JOIN CADENA ON CONDICION_
    (19) ELECCION_JOIN -> . INNER JOIN CADENA CADENA ON CONDICION_
    (20) ELECCION_JOIN -> . INNER JOIN CADENA AS CADENA ON CONDICION_
    (21) ELECCION_JOIN -> . LEFT JOIN CADENA ON CONDICION_
    (22) ELECCION_JOIN -> . LEFT JOIN CADENA CADENA ON CONDICION_
    (23) ELECCION_JOIN -> . LEFT JOIN CADENA AS CADENA ON CONDICION_

    WHERE           reduce using rule 17 (JOIN_ -> .)
    GROUP           reduce using rule 17 (JOIN_ -> .)
    ORDER           reduce using rule 17 (JOIN_ -> .)
    $end            reduce using rule 17 (JOIN_ -> .)
    PARENTESIS_DERECHO reduce using rule 17 (JOIN_ -> .)
    INNER           shift and go to state 16
    LEFT            shift and go to state 17

    JOIN_                          shift and go to state 14
    ELECCION_JOIN                  shift and go to state 15

state 5

    (13) FROM_ -> FROM . CADENA
    (14) FROM_ -> FROM . CADENA CADENA
    (15) FROM_ -> FROM . CADENA AS CADENA

    CADENA          shift and go to state 18


state 6

    (2) SELECT_ -> SELECT CAMPOS .

    FROM            reduce using rule 2 (SELECT_ -> SELECT CAMPOS .)


state 7

    (3) SELECT_ -> SELECT DISTINCT . CAMPOS
    (4) CAMPOS -> . CAMPO COMA CAMPOS
    (5) CAMPOS -> . CAMPO
    (6) CAMPO -> . CADENA PUNTO CADENA
    (7) CAMPO -> . CADENA PUNTO CADENA AS COMILLA CADENA COMILLA
    (8) CAMPO -> . FUNCION AS COMILLA CADENA COMILLA
    (9) FUNCION -> . MIN PARENTESIS_IZQUIERDO CADENA PUNTO CADENA PARENTESIS_DERECHO
    (10) FUNCION -> . MAX PARENTESIS_IZQUIERDO CADENA PUNTO CADENA PARENTESIS_DERECHO
    (11) FUNCION -> . COUNT PARENTESIS_IZQUIERDO CADENA PUNTO CADENA PARENTESIS_DERECHO
    (12) FUNCION -> . COUNT PARENTESIS_IZQUIERDO DISTINCT CADENA PUNTO CADENA PARENTESIS_DERECHO

    CADENA          shift and go to state 9
    MIN             shift and go to state 11
    MAX             shift and go to state 12
    COUNT           shift and go to state 13

    CAMPOS                         shift and go to state 19
    CAMPO                          shift and go to state 8
    FUNCION                        shift and go to state 10

state 8

    (4) CAMPOS -> CAMPO . COMA CAMPOS
    (5) CAMPOS -> CAMPO .

    COMA            shift and go to state 20
    FROM            reduce using rule 5 (CAMPOS -> CAMPO .)


state 9

    (6) CAMPO -> CADENA . PUNTO CADENA
    (7) CAMPO -> CADENA . PUNTO CADENA AS COMILLA CADENA COMILLA

    PUNTO           shift and go to state 21


state 10

    (8) CAMPO -> FUNCION . AS COMILLA CADENA COMILLA

    AS              shift and go to state 22


state 11

    (9) FUNCION -> MIN . PARENTESIS_IZQUIERDO CADENA PUNTO CADENA PARENTESIS_DERECHO

    PARENTESIS_IZQUIERDO shift and go to state 23


state 12

    (10) FUNCION -> MAX . PARENTESIS_IZQUIERDO CADENA PUNTO CADENA PARENTESIS_DERECHO

    PARENTESIS_IZQUIERDO shift and go to state 24


state 13

    (11) FUNCION -> COUNT . PARENTESIS_IZQUIERDO CADENA PUNTO CADENA PARENTESIS_DERECHO
    (12) FUNCION -> COUNT . PARENTESIS_IZQUIERDO DISTINCT CADENA PUNTO CADENA PARENTESIS_DERECHO

    PARENTESIS_IZQUIERDO shift and go to state 25


state 14

    (1) CONS -> SELECT_ FROM_ JOIN_ . WHERE_ GROUP_BY ORDER_BY
    (44) WHERE_ -> . WHERE CONDICION_
    (45) WHERE_ -> .

    WHERE           shift and go to state 27
    GROUP           reduce using rule 45 (WHERE_ -> .)
    ORDER           reduce using rule 45 (WHERE_ -> .)
    $end            reduce using rule 45 (WHERE_ -> .)
    PARENTESIS_DERECHO reduce using rule 45 (WHERE_ -> .)

    WHERE_                         shift and go to state 26

state 15

    (16) JOIN_ -> ELECCION_JOIN . JOIN_
    (16) JOIN_ -> . ELECCION_JOIN JOIN_
    (17) JOIN_ -> .
    (18) ELECCION_JOIN -> . INNER JOIN CADENA ON CONDICION_
    (19) ELECCION_JOIN -> . INNER JOIN CADENA CADENA ON CONDICION_
    (20) ELECCION_JOIN -> . INNER JOIN CADENA AS CADENA ON CONDICION_
    (21) ELECCION_JOIN -> . LEFT JOIN CADENA ON CONDICION_
    (22) ELECCION_JOIN -> . LEFT JOIN CADENA CADENA ON CONDICION_
    (23) ELECCION_JOIN -> . LEFT JOIN CADENA AS CADENA ON CONDICION_

    WHERE           reduce using rule 17 (JOIN_ -> .)
    GROUP           reduce using rule 17 (JOIN_ -> .)
    ORDER           reduce using rule 17 (JOIN_ -> .)
    $end            reduce using rule 17 (JOIN_ -> .)
    PARENTESIS_DERECHO reduce using rule 17 (JOIN_ -> .)
    INNER           shift and go to state 16
    LEFT            shift and go to state 17

    ELECCION_JOIN                  shift and go to state 15
    JOIN_                          shift and go to state 28

state 16

    (18) ELECCION_JOIN -> INNER . JOIN CADENA ON CONDICION_
    (19) ELECCION_JOIN -> INNER . JOIN CADENA CADENA ON CONDICION_
    (20) ELECCION_JOIN -> INNER . JOIN CADENA AS CADENA ON CONDICION_

    JOIN            shift and go to state 29


state 17

    (21) ELECCION_JOIN -> LEFT . JOIN CADENA ON CONDICION_
    (22) ELECCION_JOIN -> LEFT . JOIN CADENA CADENA ON CONDICION_
    (23) ELECCION_JOIN -> LEFT . JOIN CADENA AS CADENA ON CONDICION_

    JOIN            shift and go to state 30


state 18

    (13) FROM_ -> FROM CADENA .
    (14) FROM_ -> FROM CADENA . CADENA
    (15) FROM_ -> FROM CADENA . AS CADENA

    INNER           reduce using rule 13 (FROM_ -> FROM CADENA .)
    LEFT            reduce using rule 13 (FROM_ -> FROM CADENA .)
    WHERE           reduce using rule 13 (FROM_ -> FROM CADENA .)
    GROUP           reduce using rule 13 (FROM_ -> FROM CADENA .)
    ORDER           reduce using rule 13 (FROM_ -> FROM CADENA .)
    $end            reduce using rule 13 (FROM_ -> FROM CADENA .)
    PARENTESIS_DERECHO reduce using rule 13 (FROM_ -> FROM CADENA .)
    CADENA          shift and go to state 31
    AS              shift and go to state 32


state 19

    (3) SELECT_ -> SELECT DISTINCT CAMPOS .

    FROM            reduce using rule 3 (SELECT_ -> SELECT DISTINCT CAMPOS .)


state 20

    (4) CAMPOS -> CAMPO COMA . CAMPOS
    (4) CAMPOS -> . CAMPO COMA CAMPOS
    (5) CAMPOS -> . CAMPO
    (6) CAMPO -> . CADENA PUNTO CADENA
    (7) CAMPO -> . CADENA PUNTO CADENA AS COMILLA CADENA COMILLA
    (8) CAMPO -> . FUNCION AS COMILLA CADENA COMILLA
    (9) FUNCION -> . MIN PARENTESIS_IZQUIERDO CADENA PUNTO CADENA PARENTESIS_DERECHO
    (10) FUNCION -> . MAX PARENTESIS_IZQUIERDO CADENA PUNTO CADENA PARENTESIS_DERECHO
    (11) FUNCION -> . COUNT PARENTESIS_IZQUIERDO CADENA PUNTO CADENA PARENTESIS_DERECHO
    (12) FUNCION -> . COUNT PARENTESIS_IZQUIERDO DISTINCT CADENA PUNTO CADENA PARENTESIS_DERECHO

    CADENA          shift and go to state 9
    MIN             shift and go to state 11
    MAX             shift and go to state 12
    COUNT           shift and go to state 13

    CAMPO                          shift and go to state 8
    CAMPOS                         shift and go to state 33
    FUNCION                        shift and go to state 10

state 21

    (6) CAMPO -> CADENA PUNTO . CADENA
    (7) CAMPO -> CADENA PUNTO . CADENA AS COMILLA CADENA COMILLA

    CADENA          shift and go to state 34


state 22

    (8) CAMPO -> FUNCION AS . COMILLA CADENA COMILLA

    COMILLA         shift and go to state 35


state 23

    (9) FUNCION -> MIN PARENTESIS_IZQUIERDO . CADENA PUNTO CADENA PARENTESIS_DERECHO

    CADENA          shift and go to state 36


state 24

    (10) FUNCION -> MAX PARENTESIS_IZQUIERDO . CADENA PUNTO CADENA PARENTESIS_DERECHO

    CADENA          shift and go to state 37


state 25

    (11) FUNCION -> COUNT PARENTESIS_IZQUIERDO . CADENA PUNTO CADENA PARENTESIS_DERECHO
    (12) FUNCION -> COUNT PARENTESIS_IZQUIERDO . DISTINCT CADENA PUNTO CADENA PARENTESIS_DERECHO

    CADENA          shift and go to state 38
    DISTINCT        shift and go to state 39


state 26

    (1) CONS -> SELECT_ FROM_ JOIN_ WHERE_ . GROUP_BY ORDER_BY
    (46) GROUP_BY -> . GROUP BY CAMPOS_AGRUPADOS HAVING_
    (47) GROUP_BY -> .

    GROUP           shift and go to state 41
    ORDER           reduce using rule 47 (GROUP_BY -> .)
    $end            reduce using rule 47 (GROUP_BY -> .)
    PARENTESIS_DERECHO reduce using rule 47 (GROUP_BY -> .)

    GROUP_BY                       shift and go to state 40

state 27

    (44) WHERE_ -> WHERE . CONDICION_
    (24) CONDICION_ -> . CONDICION
    (25) CONDICION_ -> . CONDICION_ AND CONDICION_
    (26) CONDICION_ -> . CONDICION_ OR CONDICION_
    (27) CONDICION_ -> . PARENTESIS_IZQUIERDO CONDICION_ OR CONDICION_ PARENTESIS_DERECHO
    (28) CONDICION_ -> . CADENA PUNTO CADENA SUBCONS
    (29) CONDICION -> . CADENA PUNTO CADENA OPERADOR_COMPARATIVO VALOR
    (30) CONDICION -> . CADENA PUNTO CADENA OPERADOR_COMPARATIVO CADENA PUNTO CADENA
    (31) CONDICION -> . CADENA PUNTO CADENA NULLABLE

    PARENTESIS_IZQUIERDO shift and go to state 44
    CADENA          shift and go to state 45

    CONDICION_                     shift and go to state 42
    CONDICION                      shift and go to state 43

state 28

    (16) JOIN_ -> ELECCION_JOIN JOIN_ .

    WHERE           reduce using rule 16 (JOIN_ -> ELECCION_JOIN JOIN_ .)
    GROUP           reduce using rule 16 (JOIN_ -> ELECCION_JOIN JOIN_ .)
    ORDER           reduce using rule 16 (JOIN_ -> ELECCION_JOIN JOIN_ .)
    $end            reduce using rule 16 (JOIN_ -> ELECCION_JOIN JOIN_ .)
    PARENTESIS_DERECHO reduce using rule 16 (JOIN_ -> ELECCION_JOIN JOIN_ .)


state 29

    (18) ELECCION_JOIN -> INNER JOIN . CADENA ON CONDICION_
    (19) ELECCION_JOIN -> INNER JOIN . CADENA CADENA ON CONDICION_
    (20) ELECCION_JOIN -> INNER JOIN . CADENA AS CADENA ON CONDICION_

    CADENA          shift and go to state 46


state 30

    (21) ELECCION_JOIN -> LEFT JOIN . CADENA ON CONDICION_
    (22) ELECCION_JOIN -> LEFT JOIN . CADENA CADENA ON CONDICION_
    (23) ELECCION_JOIN -> LEFT JOIN . CADENA AS CADENA ON CONDICION_

    CADENA          shift and go to state 47


state 31

    (14) FROM_ -> FROM CADENA CADENA .

    INNER           reduce using rule 14 (FROM_ -> FROM CADENA CADENA .)
    LEFT            reduce using rule 14 (FROM_ -> FROM CADENA CADENA .)
    WHERE           reduce using rule 14 (FROM_ -> FROM CADENA CADENA .)
    GROUP           reduce using rule 14 (FROM_ -> FROM CADENA CADENA .)
    ORDER           reduce using rule 14 (FROM_ -> FROM CADENA CADENA .)
    $end            reduce using rule 14 (FROM_ -> FROM CADENA CADENA .)
    PARENTESIS_DERECHO reduce using rule 14 (FROM_ -> FROM CADENA CADENA .)


state 32

    (15) FROM_ -> FROM CADENA AS . CADENA

    CADENA          shift and go to state 48


state 33

    (4) CAMPOS -> CAMPO COMA CAMPOS .

    FROM            reduce using rule 4 (CAMPOS -> CAMPO COMA CAMPOS .)


state 34

    (6) CAMPO -> CADENA PUNTO CADENA .
    (7) CAMPO -> CADENA PUNTO CADENA . AS COMILLA CADENA COMILLA

    COMA            reduce using rule 6 (CAMPO -> CADENA PUNTO CADENA .)
    FROM            reduce using rule 6 (CAMPO -> CADENA PUNTO CADENA .)
    AS              shift and go to state 49


state 35

    (8) CAMPO -> FUNCION AS COMILLA . CADENA COMILLA

    CADENA          shift and go to state 50


state 36

    (9) FUNCION -> MIN PARENTESIS_IZQUIERDO CADENA . PUNTO CADENA PARENTESIS_DERECHO

    PUNTO           shift and go to state 51


state 37

    (10) FUNCION -> MAX PARENTESIS_IZQUIERDO CADENA . PUNTO CADENA PARENTESIS_DERECHO

    PUNTO           shift and go to state 52


state 38

    (11) FUNCION -> COUNT PARENTESIS_IZQUIERDO CADENA . PUNTO CADENA PARENTESIS_DERECHO

    PUNTO           shift and go to state 53


state 39

    (12) FUNCION -> COUNT PARENTESIS_IZQUIERDO DISTINCT . CADENA PUNTO CADENA PARENTESIS_DERECHO

    CADENA          shift and go to state 54


state 40

    (1) CONS -> SELECT_ FROM_ JOIN_ WHERE_ GROUP_BY . ORDER_BY
    (52) ORDER_BY -> . ORDER BY CAMPOS_ORDENADOS
    (53) ORDER_BY -> .

    ORDER           shift and go to state 56
    $end            reduce using rule 53 (ORDER_BY -> .)
    PARENTESIS_DERECHO reduce using rule 53 (ORDER_BY -> .)

    ORDER_BY                       shift and go to state 55

state 41

    (46) GROUP_BY -> GROUP . BY CAMPOS_AGRUPADOS HAVING_

    BY              shift and go to state 57


state 42

    (44) WHERE_ -> WHERE CONDICION_ .
    (25) CONDICION_ -> CONDICION_ . AND CONDICION_
    (26) CONDICION_ -> CONDICION_ . OR CONDICION_

    GROUP           reduce using rule 44 (WHERE_ -> WHERE CONDICION_ .)
    ORDER           reduce using rule 44 (WHERE_ -> WHERE CONDICION_ .)
    $end            reduce using rule 44 (WHERE_ -> WHERE CONDICION_ .)
    PARENTESIS_DERECHO reduce using rule 44 (WHERE_ -> WHERE CONDICION_ .)
    AND             shift and go to state 58
    OR              shift and go to state 59


state 43

    (24) CONDICION_ -> CONDICION .

    AND             reduce using rule 24 (CONDICION_ -> CONDICION .)
    OR              reduce using rule 24 (CONDICION_ -> CONDICION .)
